--- a/css/style.css
+++ b/css/style.css
@@ -92,8 +92,6 @@ span {
 
 .col-50 {
     width: 50%;
-    height: 100px;
-    border: 1px solid white;
     color: white;
     padding: 20px;
 }
@@ -105,4 +103,9 @@ span {
 h4 {
     font-size: 25px;
     padding-right: 275px;
+}
+
+.social {
+    margin-top: 10px;
+    width: 3%;
 }
