--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,16 @@
     flex-wrap: wrap;
 }
 
+.fixed-position {
+    position: fixed;
+    z-index: 2;
+    top: 0;
+}
+
+main {
+    padding-top: 50px;
+}
+
 .col-33 {
     width: calc(100% / 3);
     position: relative;
